feat: toList로 변경